@@ -2098,10 +2098,10 @@ public class SyncProxyTester extends Activity implements OnClickListener {
 										msg.setDistanceToManeuverScale((float) Integer.parseInt(txtDistanceToManeuverScale.getText().toString()));
 										msg.setManeuverComplete(chkManeuverComplete.isChecked());
 										msg.setCorrelationID(autoIncCorrId++);
-										if (chkIncludeSoftButtons.isChecked() &&
-												(currentSoftButtons != null) &&
-												(currentSoftButtons.size() > 0)) {
+										if (currentSoftButtons != null) {
 											msg.setSoftButtons(currentSoftButtons);
+										} else {
+											msg.setSoftButtons(new Vector<SoftButton>());
 										}
 										currentSoftButtons = null;
 										chkIncludeSoftButtons = null;
