@@ -1,4 +1,5 @@
 [CW5]
+* ShowConstantTBT message: always send soft buttons even if an empty array.
 * Properly display subscribed buttons after first HMI status notification.
 * ResetGlobalProperties dialog for v1 protocol: hide and don't send VR help title and VR help item properties.
 * AlertManeuver message: an array of TTS Chunks can be sent now.
